:art: decoupled from filesystem